--- a/app/scss/_highcharts.scss
+++ b/app/scss/_highcharts.scss
@@ -205,13 +205,13 @@
   /* Series options */
   /* Default colors */
   .highcharts-color-0 {
-    fill: $green-primary;
-    stroke: $green-primary;
+    fill: $green-secondary-3;
+    stroke: $green-secondary-3;
   }
   
   .highcharts-color-1 {
-    fill: $slate-secondary-3;
-    stroke: $slate-secondary-3;
+    fill: $green-secondary-5;
+    stroke: $green-secondary-5;
   }
   
   .highcharts-color-2 {
